--- a/Angular/src/app/app.component.html
+++ b/Angular/src/app/app.component.html
@@ -12,6 +12,8 @@
   </nav>
 
   <div class="container mt-3">
-    <router-outlet></router-outlet>
+    <router-outlet>
+    </router-outlet>
   </div>
+
 </div>
