--- a/Angular/src/app/app.component.html
+++ b/Angular/src/app/app.component.html
@@ -8,6 +8,12 @@
       <li class="nav-item">
         <a routerLink="add_movie" class="nav-link">Add movie</a>
       </li>
+      <li class="nav-item">
+        <a routerLink="shows" class="nav-link">TV Shows</a>
+      </li>
+      <li class="nav-item">
+        <a routerLink="add_show" class="nav-link">Add show</a>
+      </li>
     </div>
   </nav>
 
