--- a/Angular/src/app/components/show-list/show-list.component.html
+++ b/Angular/src/app/components/show-list/show-list.component.html
@@ -19,44 +19,46 @@
       </div>
     </div>
     <div class="col-md-6">
-      <h4>Movies List</h4>
+      <h4>Shows List</h4>
       <ul class="list-group">
         <li
           class="list-group-item"
-          *ngFor="let movie of movies; let i = index"
+          *ngFor="let show of shows; let i = index"
           [class.active]="i == currentIndex"
-          (click)="setActiveMovie(movie, i)"
+          (click)="setActiveShow(show, i)"
         >
-          {{ movie.title }}
+          {{ show.title }}
         </li>
       </ul>
   
-      <button class="m-3 btn btn-sm btn-danger" (click)="removeAllMovies()">
+      <button class="m-3 btn btn-sm btn-danger" (click)="removeAllShows()">
         Remove All
       </button>
     </div>
     <div class="col-md-6">
-      <div *ngIf="currentMovie">
-        <h4>Movie</h4>
+      <div *ngIf="currentShow">
+        <h4>Show</h4>
         <div>
-          <label><strong>Title:</strong></label> {{ currentMovie.title }}
+          <label><strong>Title:</strong></label> {{ currentShow.title }}
         </div>
         <div>
-          <label><strong>Genre:</strong></label>
-          {{ currentMovie.genre }}
+          <label><strong>Genre:</strong></label> {{ currentShow.genre }}
         </div>
         <div>
-          <label><strong>Year:</strong></label> {{ currentMovie.year }}
+          <label><strong>Seasons:</strong></label> {{ currentShow.seasons }}
+        </div>
+        <div>
+          <label><strong>Active:</strong></label> {{ currentShow.active ? "Active" : "Inactive"}}
         </div>
   
-        <a class="badge badge-warning" routerLink="/movies/{{ currentMovie.id }}">
+        <a class="badge badge-warning" routerLink="/shows/{{ currentShow.id }}">
           Edit
         </a>
       </div>
   
-      <!-- <div *ngIf="!currentMovie">
+      <!-- <div *ngIf="!currentShow">
         <br />
-        <p>Please click on a Movie...</p>
+        <p>Please click on a Show...</p>
       </div> -->
     </div>
   </div>
